--- a/_layouts/hub.html
+++ b/_layouts/hub.html
@@ -8,34 +8,66 @@ layout: default
 
     {{ content }}
     
-    <div id="news_top">
-    {% assign counter = 0 %}
-    {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
-    {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
-    {% for post in site.categories['post'] limit:10 %}
-        {% if counter == 0 %}
-            <div class="news_latest">
-                <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-                {% comment %}
-                {% if post.date == nil %}
-                    <p class="date">Undated</p>
-                {% else %}
-                    <p class="date">
-                        {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
-                        {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
-                        {% if postdate == nowday %}
-                            {{ post.date | date: site.data.format.same_day }}
-                        {% elsif postyear == nowyear %}
-                            {{ post.date | date: site.data.format.same_year }}
-                        {% endif %}
-                    </p>
-                {% endif %}
-                {% endcomment %}
-                <p class="excerpt">{{ post.excerpt }}</p>
-            </div>
-            <div class="news_next">
-        {% else %}
-            <div class="news_entry">
+    <div class="news_tops">
+    {% assign top_id = nil %}
+    {% for post in site.categories['news_top'] limit:1 %}
+        {% assign top_id = post.date %}
+        <div class="news_top">
+            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+            {% comment %}
+            {% if post.date == nil %}
+                <p class="date">Undated</p>
+            {% else %}
+                <p class="date">
+                    {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
+                    {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
+                    {% if postdate == nowday %}
+                        {{ post.date | date: site.data.format.same_day }}
+                    {% elsif postyear == nowyear %}
+                        {{ post.date | date: site.data.format.same_year }}
+                    {% endif %}
+                </p>
+            {% endif %}
+            {% endcomment %}
+            <p class="excerpt">{{ post.excerpt }}</p>
+        </div>
+    {% endfor %}
+    </div>
+    
+    <div class="news_articles">
+    {% for post in site.categories['news_article'] limit:10 %}
+        {% if post.date != top_id %}
+        <div class="news_article">
+            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+            {% comment %}
+            {% if post.date == nil %}
+                <p class="date">Undated</p>
+            {% else %}
+                <p class="date">
+                    {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
+                    {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
+                    {% if postdate == nowday %}
+                        {{ post.date | date: site.data.format.same_day }}
+                    {% elsif postyear == nowyear %}
+                        {{ post.date | date: site.data.format.same_year }}
+                    {% endif %}
+                </p>
+            {% endif %}
+            {% endcomment %}
+            <p class="excerpt">{{ post.excerpt }}</p>
+        </div>
+        {% endif %}
+    {% endfor %}
+    </div>
+    
+    <div class="news_sections_block">
+        <div class="news_sections">
+            {% comment %}
+            <h1>Sections</h1>
+            {% endcomment %}
+            
+            {% for post in site.categories['news_section'] limit:10 %}
+            <div class="news_section">
                 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
                 {% comment %}
                 {% if post.date == nil %}
@@ -54,12 +86,10 @@ layout: default
                 {% endcomment %}
                 <p class="excerpt">{{ post.excerpt }}</p>
             </div>
-        {% endif %}
-        {% assign counter = counter | plus:'1' %}
-    {% endfor %}
+            {% endfor %}
+        </div>
     </div>
-    </div>
-
+    
 </section>
 
 {% include hub_right_sidebar.html %}
