--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -699,6 +699,9 @@ section.column_left_sidebar {
     @media print {
         display: none;
     }
+    @include max-screen(720px) {
+        display: none;
+    }
     @include sidebar_component_scroll(1);
     margin-top: 20px;
 
