--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -12,10 +12,10 @@
             <div class="announcement">
                 <div class="announcement_heading">
                     <h2>{{ post.title }}</h2>
-                    {% if post.image != nil %}
+                    {% if post.image.source != nil %}
                         <div class="image">
-                            <img src="{{ post.image }}" class="label" width="100%" height="auto"/>
-                            <p class="attribution">image by {{ post.image_attribution }}&nbsp;</p>
+                            <img src="{{ post.image.source }}" class="label" width="100%" height="auto"/>
+                            <p class="attribution">image by {{ post.image.source.attribution }}&nbsp;</p>
                         </div>
                     {% endif %}
                     {% comment %}
