--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,8 +40,8 @@
     <meta name="twitter:site" content="@dutertetimes" />
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page.excerpt }}" />
-    {% if page.image %}
-    <meta name="twitter:image:src" content="{{ site.url }}{{ page.image }}" />
+    {% if page.image.source != nil %}
+    <meta name="twitter:image:src" content="{{ site.url }}{{ page.image.source }}" />
     {% else %}
     <meta name="twitter:image:src" content="{{ site.url }}images/favicon/{{ site.author.icon }}" />
     {% endif %}
