--- a/_sass/mixin.scss
+++ b/_sass/mixin.scss
@@ -106,25 +106,31 @@
     margin: 0;
     margin-bottom: 15px;
     padding-top: 1px;
+    display: inline;
 }
 
 @mixin sidebar_component {
     margin: 0px 0px 15px 0px;
-    padding: 10px 0px 0px 0px;
+    padding: 10px 13px 12px 13px;
+    @include max-screen(720px) {
+        padding: 10px 0px 0px 0px;
+    }
+    background: $color_sidebar_bg;
+}
+
+@mixin sidebar_component_internal {
+    margin-top: 5px + 3px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    @include max-screen(720px) {
+        padding-right: 15px;
+    }
 }
 
 @mixin sidebar_component_boxed($shadow) {
     @include sidebar_component;
     border: 1px solid $color_box;
     border-radius: 3px;
-
-    padding-right: 13px;
-    padding-bottom: 12px;
-    padding-left: 13px;
-    @include max-screen(720px) {
-        padding: 10px 0px 0px 0px;
-    }
-    background: $color_sidebar_bg;
     @include min-screen(721px) {
         @if $shadow > 0 {
             box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.19), 0 2px 10px 0 rgba(0, 0, 0, 0.18);
@@ -138,18 +144,12 @@
 }
 
 @mixin sidebar_component_scroll_internal($height) {
-    margin-top: 5px + 3px;
-    margin-bottom: 0px;
-    margin-right: 0px;
+    @include sidebar_component_internal;
     @include min-screen(721px) {
         height: $height;
         overflow-y: scroll;
     }
-    @include max-screen(720px) {
-        padding-right: 15px;
-    }
     overflow-x: hidden;
-    background: $color_sidebar_bg;
 }
 
 @mixin component_entry {
