--- a/_layouts/hub.html
+++ b/_layouts/hub.html
@@ -40,7 +40,7 @@ layout: default
     <div id="news_articles_block">
         <h1>Articles</h1>
         <div class="news_articles">
-            {% for post in site.categories['news_article'] %}
+            {% for post in site.categories['news_article'] limit:10 %}
                 {% if post.date != top_id %}
                 <div class="news_article">
                     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
