Fix announcement image attribution

--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -15,7 +15,7 @@
                     {% if post.image.source != nil %}
                         <div class="image">
                             <img src="{{ post.image.source }}" class="label" width="100%" height="auto"/>
-                            <p class="attribution">image by {{ post.image.source.attribution }}&nbsp;</p>
+                            <p class="attribution">image by {{ post.image.attribution }}&nbsp;</p>
                         </div>
                     {% endif %}
                     {% comment %}
