--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -1,16 +1,16 @@
 <div id="related_posts_block">
+    <h1>Related Posts</h1>
     <div class="related_posts">
-        <h1>Related Posts</h1>
         {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
         {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
         <!-- The following code snippet was taken from http://zhangwenli.com -->
         <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
         {% assign hasSimilar = '' %}
-        {% for post in site.categories['post'] limit:5 %}
+        {% for post in site.categories['news_article'] limit:10 %}
             {% assign postHasSimilar = false %}
             {% for tag in post.tags %}
                 {% for thisTag in page.tags %}
-                    {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
+                    {% if postHasSimilar == false and hasSimilar.size < 3 and post.title != page.title and tag == thisTag %}
                         <div class="related_post">
                             <div class="related_post_heading">
                                 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
