--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -57,6 +57,10 @@ $font_nav:                  $font_serif_thin;
 $font_size_nav:	            14px;
 $font_size_page_nav:        $font_size_nav + 2;
 
+$font_attribution:              $font_serif_thin;
+$font_size_attribution:         10px;
+$font_line_height_attribution:  10px;
+
 // Label
 $font_label:                $font_sans;
 $font_size_label:           11px;
