--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -657,11 +657,7 @@ section.column_left_sidebar {
                     padding: 5px 5px 5px 5px;
                     margin: 5px 0px 5px 0;
                     p.attribution {
-                        font-size: $font_size_page_meta - 2;
-                        font-style: italic;
-                        line-height: $font_size_page_meta - 6;
-                        color: $color_image_attribution;
-                        text-align: right;
+                        @include attribution;
                         padding: 2px 0px 3px 0px;
                         margin: 2px 0 0 0;
                     }
@@ -941,11 +937,7 @@ section.post_column_main {
             margin: 0 0px 20px 0;
             padding: 5px 5px 5px 5px;
             p.attribution {
-                font-size: $font_size_page_meta;
-                font-style: italic;
-                line-height: $font_line_height_page_meta - 8;
-                color: $color_image_attribution;
-                text-align: right;
+                @include attribution;
                 padding: 2px 0px 3px 0px;
                 margin: 2px 0 0 0;
             }
@@ -978,11 +970,7 @@ section.post_column_main {
             height: auto;
         }
         p.attribution {
-            font-size: $font_size_page_meta;
-            font-style: italic;
-            line-height: $font_line_height_page_meta - 8;
-            color: $color_image_attribution;
-            text-align: right;
+            @include attribution;
             padding: 2px 0px 3px 0px;
             margin: 2px 0 0 0;
         }
@@ -1598,11 +1586,7 @@ section.column_right_sidebar {
                 padding: 5px 5px 5px 5px;
                 margin: 5px 0px 5px 0;
                 p.attribution {
-                    font-size: $font_size_page_meta - 2;
-                    font-style: italic;
-                    line-height: $font_size_page_meta - 6;
-                    color: $color_image_attribution;
-                    text-align: right;
+                    @include attribution;
                     padding: 2px 0px 3px 0px;
                     margin: 2px 0 0 0;
                 }
